# src/main/resources/static/API.yml
@@ -30,6 +30,21 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SaleDto'
+    delete:
+      tags:
+        - Sale
+      summary: Получить продажу
+      operationId: deleteSaleById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: Успешный запрос
 
   /v1/sales:
     post:
